# sdkpy

./: README.md  __init__.py  config.yml  env_backup.json  pyproject.toml  run.py
sdkpy/: cli.py  env.py  sdk.py
tests/: config.yml  conftest.py
tests/sdk/: config.yml
